--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Battleship</title>
   </head>
   <body>
+    <div class="gameboard"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
