style gameboard template

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
   </head>
+
   <body>
-    <div class="gameboard"></div>
+    
+    <section class="gameboard-container">
+      <div class="boards-panel"></div>
+    </section>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
