setup led-light

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </section>
 
     <section class="control-container">
+      <div class="led"></div>
       <button id="music" data-active="true">
         <svg id="music-icon-on" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.00 24.00" fill="none" stroke="#dfdddd">
           <g id="SVGRepo_bgCarrier" stroke-width="0"/>
