setup own directory for main game-templates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <section class="player">McArthur to attack...</section>
 
     <section class="gameboard-container">
-      <div class="boards-panel"></div>
+      <div class="boards-panel">
+        <img id="cruiser" src="cruiser.png" alt="carrier">
+        <img src="destroyer.png" alt="destroyer" id="destroyer">
+        <img src="fire.gif" alt="fire" id="fire">
+      </div>
     </section>
 
     <section class="control-container">
