setup ship placement page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-      <a href="./src/pages/game.html">Play</a>
+      <a href="./src/pages/placement.html">Place Ships</a>
 
       <script type="module" src="src/components/interface/menuInterface.ts"></script>
   </body>
