setup initialization on modules

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -48,6 +48,6 @@
 
     <section class="nav-container"></section>
 
-    <script type="module" src="../game.ts"></script>
+    <script type="module" src="../init/gameInit.ts"></script>
 </body>
 </html>
