--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
   </head>
 
   <body>
-      <a href="./src/pages/placement.html">Place Ships</a>
+      <button class="btn-opponent">vs player2</button>
+      <button class="btn-opponent" data-vs-computer>vs computer</button>
 
-      <script type="module" src="src/components/interface/menuInterface.ts"></script>
+      <dialog id="input-name-modal">
+        <form action="">
+          <div class="input-row" id="name-p1">
+            <label for="name-p1">Player-1 Name</label>
+            <input type="text" required>
+          </div>
+          <div class="input-row" id="name-p2">
+            <label for="name-p2">Player-2 Name</label>
+            <input type="text" id="name-p2" required>
+          </div>
+          <button id="submit-btn">Place Ships</button>
+        </form>
+      </dialog>
+
+      <script type="module" src="./src/init/menuInit.ts"></script>
   </body>
 </html>
