--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -43,6 +43,16 @@
             <g id="SVGRepo_iconCarrier"> <path d="M12.5493 4.50005C11.3193 4.04005 8.70926 5.49996 6.54926 7.40996H4.94922C3.88835 7.40996 2.87093 7.83145 2.12079 8.58159C1.37064 9.33174 0.949219 10.3491 0.949219 11.41V13.41C0.949219 14.4708 1.37064 15.4883 2.12079 16.2385C2.87093 16.9886 3.88835 17.41 4.94922 17.41H6.54926C8.65926 19.35 11.2693 20.78 12.5493 20.33C14.6493 19.55 14.9992 15.33 14.9992 12.41C14.9992 9.48996 14.6493 5.28005 12.5493 4.50005Z" stroke="#dfdddd" stroke-width="0.95" stroke-linecap="round" stroke-linejoin="round"/> </g>
           </svg>
         </button>
+        <button id="wave-sound" data-active="true">
+          <svg id="wave-sound-icon-on" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#ffffff">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"/>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"/>
+            <g id="SVGRepo_iconCarrier"> <path d="M3 10C5.48276 10 7.34483 7 7.34483 7C7.34483 7 9.2069 10 11.6897 10C14.1724 10 16.6552 7 16.6552 7C16.6552 7 19.1379 10 21 10" stroke="#ffffff" stroke-width="0.72" stroke-linecap="round" stroke-linejoin="round"/> <path d="M3 17C5.48276 17 7.34483 14 7.34483 14C7.34483 14 9.2069 17 11.6897 17C14.1724 17 16.6552 14 16.6552 14C16.6552 14 19.1379 17 21 17" stroke="#ffffff" stroke-width="0.72" stroke-linecap="round" stroke-linejoin="round"/> </g>
+          </svg>
+          <svg id="wave-sound-icon-off" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="#fff">
+            <path d="M3 17c2.48276 0 4.34483-3 4.34483-3s1.86207 3 4.34487 3c2.4827 0 4.9655-3 4.9655-3S19.1379 17 21 17" stroke-width=".72" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
       </section>
 
       <section class="ships-container">
