add data-characters on ships

--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -35,32 +35,66 @@
         </section>
   
         <section class="ships-container">
-          <div class="ship-container">
-            <div class="ship" data-ship="carrier" data-length="5" draggable="true" data-vertical="false">
+          <div class="ship-container" id="carrier">
+            <div class="ship" 
+                 data-ship="carrier" 
+                 data-length="5" 
+                 draggable="true" 
+                 data-vertical="false"
+                 data-character="c"
+            >
               <img src="/carrier.png" alt="">
               <img src="/carrier-v.png" alt="">
             </div>
           </div>
-          <div class="ship-container">
-            <div class="ship" data-ship="battleship" data-length="4" draggable="true" data-vertical="false">`
+
+          <div class="ship-container" id="battleship">
+            <div class="ship"  
+                 data-ship="battleship" 
+                 data-length="4" 
+                 draggable="true" 
+                 data-vertical="false"
+                 data-character="b"
+            >
               <img src="/battleship.png" alt="">
               <img src="/battleship-v.png" alt="">
             </div>
           </div>
-          <div class="ship-container">
-            <div class="ship" data-ship="cruiser" data-length="3" draggable="true" data-vertical="false">
+
+          <div class="ship-container" id="cruiser">
+            <div class="ship" 
+                 data-ship="cruiser" 
+                 data-length="3" 
+                 draggable="true" 
+                 data-vertical="false"
+                 data-character="r"
+            >
               <img src="/cruiser.png" alt="">
               <img src="/cruiser-v.png" alt="">
             </div>
           </div>
-          <div class="ship-container">
-            <div class="ship" data-ship="submarine" data-length="3" draggable="true" data-vertical="false">
+
+          <div class="ship-container" id="submarine">
+            <div class="ship" 
+                 data-ship="submarine" 
+                 data-length="3" 
+                 draggable="true" 
+                 data-vertical="false"
+                 data-character="s"
+            >
               <img src="/submarine.png" alt="">
               <img src="/submarine-v.png" alt="">
             </div>
           </div>
-          <div class="ship-container">
-            <div class="ship" data-ship="destroyer" data-length="2" draggable="true" data-vertical="false">
+
+          <div class="ship-container" id="destroyer">
+            <div class="ship" 
+                 data-ship="destroyer" 
+                 data-length="2" 
+                 draggable="true" 
+                 data-vertical="false"
+                 data-character="d"
+            >
               <img src="/destroyer.png" alt="">
               <img src="/destroyer-v.png" alt="">
             </div>
