implement placementState class and ui content

--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -102,7 +102,7 @@
         </section>
   
         <section class="start-game-container">
-            <button>Start Game</button>
+            <button id="start-btn">Start Game</button>
         </section>
     </main>
     <script type="module" src="../init/placementInit.ts"></script>
