--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -36,7 +36,7 @@
   
         <section class="ships-container">
           <div class="ship-container" id="carrier">
-            <div class="ship" 
+            <div class="ship ship-default" 
                  data-ship="carrier" 
                  data-length="5" 
                  draggable="true" 
@@ -49,7 +49,7 @@
           </div>
 
           <div class="ship-container" id="battleship">
-            <div class="ship"  
+            <div class="ship ship-default"  
                  data-ship="battleship" 
                  data-length="4" 
                  draggable="true" 
@@ -62,7 +62,7 @@
           </div>
 
           <div class="ship-container" id="cruiser">
-            <div class="ship" 
+            <div class="ship ship-default" 
                  data-ship="cruiser" 
                  data-length="3" 
                  draggable="true" 
@@ -75,7 +75,7 @@
           </div>
 
           <div class="ship-container" id="submarine">
-            <div class="ship" 
+            <div class="ship ship-default" 
                  data-ship="submarine" 
                  data-length="3" 
                  draggable="true" 
@@ -88,7 +88,7 @@
           </div>
 
           <div class="ship-container" id="destroyer">
-            <div class="ship" 
+            <div class="ship ship-default" 
                  data-ship="destroyer" 
                  data-length="2" 
                  draggable="true" 
