implement enemyShips display toggling

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -56,21 +56,43 @@
       </section>
 
       <section class="ships-container">
-        <div class="ship-container">
-          <img src="/carrier.png" alt="">
+
+        <div class="p1-ships">
+          <div class="ship-container" data-ship="carrier">
+            <img src="/carrier.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="battleship">
+            <img src="/battleship.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="cruiser">
+            <img src="/cruiser.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="submarine">
+            <img src="/submarine.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="destroyer">
+            <img src="/destroyer.png" alt="">
+          </div>
         </div>
-        <div class="ship-container">
-          <img src="/battleship.png" alt="">
+
+        <div class="p2-ships">
+          <div class="ship-container" data-ship="carrier">
+            <img src="/carrier.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="battleship">
+            <img src="/battleship.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="cruiser">
+            <img src="/cruiser.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="submarine">
+            <img src="/submarine.png" alt="">
+          </div>
+          <div class="ship-container" data-ship="destroyer">
+            <img src="/destroyer.png" alt="">
+          </div>
         </div>
-        <div class="ship-container">
-          <img src="/cruiser.png" alt="">
-        </div>
-        <div class="ship-container">
-          <img src="/submarine.png" alt="">
-        </div>
-        <div class="ship-container">
-          <img src="/destroyer.png" alt="">
-        </div>
+        
       </section>
 
       <section class="nav-container">
