placeShips on board interface

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -99,6 +99,59 @@
         <img src="/radar.gif" alt="">
         <img src="/waves.gif" alt="">
       </section>
+
+      <section class="gameboard-ships">
+        <div class="p1-deployed-ship" data-vertical="false" data-ship-key="c">
+          <img src="/carrier.png" alt="">
+          <img src="/carrier-v.png" alt="">
+        </div>
+
+        <div class="p1-deployed-ship" data-vertical="false" data-ship-key="b">
+          <img src="/battleship.png" alt="">
+          <img src="/battleship-v.png" alt="">
+        </div>
+
+        <div class="p1-deployed-ship" data-vertical="false" data-ship-key="r">
+          <img src="/cruiser.png" alt="">
+          <img src="/cruiser-v.png" alt="">
+        </div>
+
+        <div class="p1-deployed-ship" data-vertical="false" data-ship-key="s">
+          <img src="/submarine.png" alt="">
+          <img src="/submarine-v.png" alt="">
+        </div>
+
+        <div class="p1-deployed-ship" data-vertical="false" data-ship-key="d">
+          <img src="/destroyer.png" alt="">
+          <img src="/destroyer-v.png" alt="">
+        </div>
+
+        <div class="p2-deployed-ship" data-vertical="false" data-ship-key="c">
+          <img src="/carrier.png" alt="">
+          <img src="/carrier-v.png" alt="">
+        </div>
+
+        <div class="p2-deployed-ship" data-vertical="false" data-ship-key="b">
+          <img src="/battleship.png" alt="">
+          <img src="/battleship-v.png" alt="">
+        </div>
+
+        <div class="p2-deployed-ship" data-vertical="false" data-ship-key="r">
+          <img src="/cruiser.png" alt="">
+          <img src="/cruiser-v.png" alt="">
+        </div>
+
+        <div class="p2-deployed-ship" data-vertical="false" data-ship-key="s">
+          <img src="/submarine.png" alt="">
+          <img src="/submarine-v.png" alt="">
+        </div>
+
+        <div class="p2-deployed-ship" data-vertical="false" data-ship-key="d">
+          <img src="/destroyer.png" alt="">
+          <img src="/destroyer-v.png" alt="">
+        </div>
+      </section>
+
       </main>
 
       <script type="module" src="../init/gameInit.ts"></script>
