implement board highlight animation in attack

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -10,8 +10,9 @@
       <section class="player">McArthur to attack...</section>
 
       <section class="gameboard-container">
-        <div class="boards-panel">
-        </div>
+        <div class="boards-panel"></div>
+        <div class="attack-highlight vertical"></div>
+        <div class="attack-highlight horizontal"></div>
       </section>
 
       <section class="control-container">
@@ -148,6 +149,15 @@
           <img src="/destroyer-v.png" alt="">
         </div>
       </section>
+
+      <div class="miss-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="#c8dfe9cc" viewBox="0 0 24 24" xml:space="preserve">
+          <path d="M5.6 4.2 4.2 5.6l6.4 6.4-6.4 6.4 1.4 1.4 6.4-6.4 6.4 6.4 1.4-1.4-6.4-6.4 6.4-6.4-1.4-1.4-6.4 6.4-6.4-6.4z"/>
+          <path style="fill:none" d="M0 0h24v24H0z"/>
+        </svg>
+      </div>
+
+      <audio id="splash-audio" src="../../public/splash-bs.mp3"></audio>
 
       </main>
 
