set animation for hit

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -157,7 +157,11 @@
         </svg>
       </div>
 
-      <audio id="splash-audio" src="../../public/splash-bs.mp3"></audio>
+      <div class="fire-gif">
+        <img src="/fire.gif" alt="">
+      </div>
+
+      <audio id="splash-audio" src="/splash-bs.mp3"></audio>
 
       </main>
 
