imlement attack sounds

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -150,6 +150,8 @@
         </div>
       </section>
 
+      <!-- ================================================ RECEIVE ATTACK ICONS  =================================================== -->
+      
       <div class="miss-icon">
         <svg xmlns="http://www.w3.org/2000/svg" fill="#c8dfe9cc" viewBox="0 0 24 24" xml:space="preserve">
           <path d="M5.6 4.2 4.2 5.6l6.4 6.4-6.4 6.4 1.4 1.4 6.4-6.4 6.4 6.4 1.4-1.4-6.4-6.4 6.4-6.4-1.4-1.4-6.4 6.4-6.4-6.4z"/>
@@ -161,7 +163,10 @@
         <img src="/fire.gif" alt="">
       </div>
 
+      <!-- ================================================  AUDIO  =================================================== -->
+      <audio id="activate-audio" src="/activate.mp3"></audio>
       <audio id="splash-audio" src="/splash-bs.mp3"></audio>
+      <audio id="explosion-audio" src="/explosion.mp3"></audio>
 
       </main>
 
