add sunk-ship audio

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -167,6 +167,7 @@
       <audio id="activate-audio" src="/activate.mp3"></audio>
       <audio id="splash-audio" src="/splash-bs.mp3"></audio>
       <audio id="explosion-audio" src="/explosion.mp3"></audio>
+      <audio id="sunk-audio" src="/sunk.mp3"></audio>
       <audio id="optimal-audio" src="/optimal.mp3"></audio>
       <audio id="alert-audio" src="/alert.mp3"></audio>
 
