implement sunk ship methods

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -56,37 +56,37 @@
       <section class="ships-container">
 
         <div class="p1-ships">
-          <div class="ship-container" data-ship="carrier">
+          <div class="ship-container" data-ship-key="c">
             <img src="/carrier.png" alt="">
           </div>
-          <div class="ship-container" data-ship="battleship">
+          <div class="ship-container" data-ship-key="b">
             <img src="/battleship.png" alt="">
           </div>
-          <div class="ship-container" data-ship="cruiser">
+          <div class="ship-container" data-ship-key="r">
             <img src="/cruiser.png" alt="">
           </div>
-          <div class="ship-container" data-ship="submarine">
+          <div class="ship-container" data-ship-key="s">
             <img src="/submarine.png" alt="">
           </div>
-          <div class="ship-container" data-ship="destroyer">
+          <div class="ship-container" data-ship-key="d">
             <img src="/destroyer.png" alt="">
           </div>
         </div>
 
         <div class="p2-ships">
-          <div class="ship-container" data-ship="carrier">
+          <div class="ship-container" data-ship-key="c">
             <img src="/carrier.png" alt="">
           </div>
-          <div class="ship-container" data-ship="battleship">
+          <div class="ship-container" data-ship-key="b">
             <img src="/battleship.png" alt="">
           </div>
-          <div class="ship-container" data-ship="cruiser">
+          <div class="ship-container" data-ship-key="r">
             <img src="/cruiser.png" alt="">
           </div>
-          <div class="ship-container" data-ship="submarine">
+          <div class="ship-container" data-ship-key="s">
             <img src="/submarine.png" alt="">
           </div>
-          <div class="ship-container" data-ship="destroyer">
+          <div class="ship-container" data-ship-key="d">
             <img src="/destroyer.png" alt="">
           </div>
         </div>
