add and initialize background audios

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -164,6 +164,9 @@
       </div>
 
       <!-- ================================================  AUDIO  =================================================== -->
+      <audio id="background-music" src="/background.mp3" loop></audio>
+      <audio id="waves-audio" src="/waves-bg.mp3" loop></audio>
+      
       <audio id="activate-audio" src="/activate.mp3"></audio>
       <audio id="splash-audio" src="/splash-bs.mp3"></audio>
       <audio id="explosion-audio" src="/explosion.mp3"></audio>
