toggle attacker name on interface

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main>
-      <section class="player">McArthur to attack...</section>
+      <section class="player"><span id="attacking-player">McArthur</span> to attack...</section>
 
       <section class="gameboard-container">
         <div class="boards-panel"></div>
