displayer winner name && set boards panel to inactive in game-over

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -178,7 +178,7 @@
     <!-- ================================================  GAME-OVER MODAL  =================================================== -->
     <dialog id="game-over-modal" class="modal">
       <div class="container">
-        <h2>GAME-OVER, John Wins</h2>
+        <h2>GAME-OVER, <span id="winner-name"></span> Wins</h2>
         <a href="./placement.html">Play Again</a>
         <a href="../../index.html">Main Menu</a>
       </div>
