--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -179,6 +179,16 @@
     <dialog id="game-over-modal" class="modal">
       <div class="container">
         <h2>GAME-OVER, <span id="winner-name"></span> Wins</h2>
+
+        <div class="display-fleet-container">
+          <div class="fleet-modal" data-player="1">
+            <h3></h3>
+          </div>
+          <div class="fleet-modal" data-player="2">
+            <h3></h3>
+          </div>
+        </div>
+
         <a href="./placement.html">Play Again</a>
         <a href="../../index.html">Main Menu</a>
       </div>
