--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -174,6 +174,7 @@
     <audio id="sunk-audio" src="/sunk.mp3"></audio>
     <audio id="optimal-audio" src="/optimal.mp3"></audio>
     <audio id="alert-audio" src="/alert.mp3"></audio>
+    <audio id="morse-audio" src="/game-over-morse.mp3"></audio>
 
     <!-- ================================================  GAME-OVER MODAL  =================================================== -->
     <dialog id="game-over-modal" class="modal">
