implement button for see-fleet in game-over modal

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <main>
-      <section class="player"><span id="attacking-player">McArthur</span> to attack...</section>
+      <section class="player">
+        <span id="attacking-player">McArthur</span>
+        <button id="see-fleet-btn">SEE FLEET</button>
+      </section>
 
       <section class="gameboard-container">
         <div class="boards-panel"></div>
