setup settings modal

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <main>
+      <button id="settings-btn">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none">
+          <g stroke="#dfdddd" stroke-width="1.5">
+            <circle cx="12" cy="12" r="3"/>
+            <path d="M3.66122 10.6392c.47255.2969.7766.8027.7766 1.3607-.00001.5581-.30406 1.0639-.7766 1.3608-.32156.202-.52874.3635-.67614.5556-.32291.4209-.46542.9527-.39618 1.4786.05192.3944.28489.7979.75083 1.605.46595.807.69892 1.2105 1.01453 1.4527.42082.3229.95268.4654 1.47858.3962.24003-.0316.48344-.1303.81912-.3077.49348-.2608 1.08362-.2712 1.56699.0079.48332.2791.76932.7953.79017 1.353.0142.3795.05046.6397.14312.8634.20299.49.59234.8794 1.08236 1.0824C10.6022 22 11.0681 22 12 22c.9319 0 1.3978 0 1.7654-.1522.49-.203.8794-.5924 1.0824-1.0824.0926-.2237.1289-.4839.1431-.8633.0208-.5578.3068-1.074.7902-1.3531.4833-.279 1.0734-.2686 1.5668-.0078.3358.1774.5792.2761.8192.3077.5259.0693 1.0578-.0733 1.4786-.3962.3156-.2421.5486-.6457 1.0146-1.4527.2074-.3593.3687-.6386.4883-.8728m-.8099-2.7664c-.4725-.2969-.7765-.8027-.7766-1.3607 0-.5581.3041-1.064.7766-1.3609.3216-.202.5287-.3635.6761-.5556.3229-.42082.4654-.95268.3962-1.47858-.0519-.39442-.2849-.79794-.7509-1.60497-.4659-.80704-.6989-1.21055-1.0145-1.45273-.4208-.32291-.9527-.46542-1.4786-.39619-.24.03161-.4834.13027-.8191.3077-.4935.26081-1.0836.27121-1.5669-.00787-.4833-.27906-.7693-.79526-.7901-1.35293-.0142-.37951-.0505-.63968-.1431-.8634-.203-.49005-.5924-.8794-1.0824-1.08239C13.3978 2 12.9319 2 12 2c-.9319 0-1.3978 0-1.7654.15224-.49002.20299-.87937.59234-1.08236 1.08239-.09266.2237-.12892.48385-.14312.86331-.02086.55772-.30687 1.07397-.79021 1.35302-.48334.27906-1.07343.26863-1.56686.00784-.33572-.17744-.57915-.27611-.8192-.30772-.5259-.06923-1.05776.07328-1.47858.39619-.31561.24218-.54858.6457-1.01453 1.45273-.20743.35929-.36869.63859-.48836.87273" stroke-linecap="round"/>
+          </g>
+        </svg>
+      </button>
+
       <section class="player">
         <span id="attacking-player">McArthur</span>
         <button id="see-fleet-btn">SEE FLEET</button>
@@ -178,6 +187,17 @@
     <audio id="optimal-audio" src="/optimal.mp3"></audio>
     <audio id="alert-audio" src="/alert.mp3"></audio>
     <audio id="morse-audio" src="/game-over-morse.mp3"></audio>
+
+    <!-- ================================================  SETTINGS MODAL  =================================================== -->
+    <dialog id="settings-modal" class="modal">
+      <div class="container">
+        <h2>SETTINGS</h2>
+
+        <p>Simulate ship motion</p>
+        <a href="./placement.html">Back to Placement</a>
+        <a href="../../index.html">Main Menu</a>
+      </div>
+    </dialog>
 
     <!-- ================================================  GAME-OVER MODAL  =================================================== -->
     <dialog id="game-over-modal" class="modal">
