implement ship-motion-ui feature

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -193,7 +193,10 @@
       <div class="container">
         <h2>SETTINGS</h2>
 
-        <p>Simulate ship motion</p>
+        <button id="ui-motion-btn" data-active="false">
+          <div id="settings-led"></div>
+          <span>Simulate ship motion</span>
+        </button>
         <a href="./placement.html">Back to Placement</a>
         <a href="../../index.html">Main Menu</a>
       </div>
