added file directories, update path

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -69,96 +69,96 @@
 
         <div class="p1-ships">
           <div class="ship-container" data-ship-key="c">
-            <img src="/carrier.png" alt="">
+            <img src="/images/carrier.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="b">
-            <img src="/battleship.png" alt="">
+            <img src="/images/battleship.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="r">
-            <img src="/cruiser.png" alt="">
+            <img src="/images/cruiser.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="s">
-            <img src="/submarine.png" alt="">
+            <img src="/images/submarine.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="d">
-            <img src="/destroyer.png" alt="">
+            <img src="/images/destroyer.png" alt="">
           </div>
         </div>
 
         <div class="p2-ships">
           <div class="ship-container" data-ship-key="c">
-            <img src="/carrier.png" alt="">
+            <img src="/images/carrier.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="b">
-            <img src="/battleship.png" alt="">
+            <img src="/images/battleship.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="r">
-            <img src="/cruiser.png" alt="">
+            <img src="/images/cruiser.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="s">
-            <img src="/submarine.png" alt="">
+            <img src="/images/submarine.png" alt="">
           </div>
           <div class="ship-container" data-ship-key="d">
-            <img src="/destroyer.png" alt="">
+            <img src="/images/destroyer.png" alt="">
           </div>
         </div>
         
       </section>
 
       <section class="nav-container">
-        <img src="/radar.gif" alt="">
-        <img src="/waves.gif" alt="">
+        <img src="/gif/radar.gif" alt="">
+        <img src="/gif/waves.gif" alt="">
       </section>
 
       <section class="gameboard-ships">
         <div class="p1-deployed-ship" data-vertical="false" data-ship-key="c">
-          <img src="/carrier.png" alt="">
-          <img src="/carrier-v.png" alt="">
+          <img src="/images/carrier.png" alt="">
+          <img src="/images/carrier-v.png" alt="">
         </div>
 
         <div class="p1-deployed-ship" data-vertical="false" data-ship-key="b">
-          <img src="/battleship.png" alt="">
-          <img src="/battleship-v.png" alt="">
+          <img src="/images/battleship.png" alt="">
+          <img src="/images/battleship-v.png" alt="">
         </div>
 
         <div class="p1-deployed-ship" data-vertical="false" data-ship-key="r">
-          <img src="/cruiser.png" alt="">
-          <img src="/cruiser-v.png" alt="">
+          <img src="/images/cruiser.png" alt="">
+          <img src="/images/cruiser-v.png" alt="">
         </div>
 
         <div class="p1-deployed-ship" data-vertical="false" data-ship-key="s">
-          <img src="/submarine.png" alt="">
-          <img src="/submarine-v.png" alt="">
+          <img src="/images/submarine.png" alt="">
+          <img src="/images/submarine-v.png" alt="">
         </div>
 
         <div class="p1-deployed-ship" data-vertical="false" data-ship-key="d">
-          <img src="/destroyer.png" alt="">
-          <img src="/destroyer-v.png" alt="">
+          <img src="/images/destroyer.png" alt="">
+          <img src="/images/destroyer-v.png" alt="">
         </div>
 
         <div class="p2-deployed-ship" data-vertical="false" data-ship-key="c">
-          <img src="/carrier.png" alt="">
-          <img src="/carrier-v.png" alt="">
+          <img src="/images/carrier.png" alt="">
+          <img src="/images/carrier-v.png" alt="">
         </div>
 
         <div class="p2-deployed-ship" data-vertical="false" data-ship-key="b">
-          <img src="/battleship.png" alt="">
-          <img src="/battleship-v.png" alt="">
+          <img src="/images/battleship.png" alt="">
+          <img src="/images/battleship-v.png" alt="">
         </div>
 
         <div class="p2-deployed-ship" data-vertical="false" data-ship-key="r">
-          <img src="/cruiser.png" alt="">
-          <img src="/cruiser-v.png" alt="">
+          <img src="/images/cruiser.png" alt="">
+          <img src="/images/cruiser-v.png" alt="">
         </div>
 
         <div class="p2-deployed-ship" data-vertical="false" data-ship-key="s">
-          <img src="/submarine.png" alt="">
-          <img src="/submarine-v.png" alt="">
+          <img src="/images/submarine.png" alt="">
+          <img src="/images/submarine-v.png" alt="">
         </div>
 
         <div class="p2-deployed-ship" data-vertical="false" data-ship-key="d">
-          <img src="/destroyer.png" alt="">
-          <img src="/destroyer-v.png" alt="">
+          <img src="/images/destroyer.png" alt="">
+          <img src="/images/destroyer-v.png" alt="">
         </div>
       </section>
 
@@ -172,21 +172,21 @@
       </div>
 
       <div class="fire-gif">
-        <img src="/fire.gif" alt="">
+        <img src="/gif/fire.gif" alt="">
       </div>
     </main>
 
     <!-- ================================================  AUDIO  =================================================== -->
-    <audio id="background-music" src="/background.mp3" loop></audio>
-    <audio id="waves-audio" src="/waves-bg.mp3" loop></audio>
+    <audio id="background-music" src="/audio/background.mp3" loop></audio>
+    <audio id="waves-audio" src="/audio/waves-bg.mp3" loop></audio>
     
-    <audio id="activate-audio" src="/activate.mp3"></audio>
-    <audio id="splash-audio" src="/splash-bs.mp3"></audio>
-    <audio id="explosion-audio" src="/explosion.mp3"></audio>
-    <audio id="sunk-audio" src="/sunk.mp3"></audio>
-    <audio id="optimal-audio" src="/optimal.mp3"></audio>
-    <audio id="alert-audio" src="/alert.mp3"></audio>
-    <audio id="morse-audio" src="/game-over-morse.mp3"></audio>
+    <audio id="activate-audio" src="/audio/activate.mp3"></audio>
+    <audio id="splash-audio" src="/audio/splash-bs.mp3"></audio>
+    <audio id="explosion-audio" src="/audio/explosion.mp3"></audio>
+    <audio id="sunk-audio" src="/audio/sunk.mp3"></audio>
+    <audio id="optimal-audio" src="/audio/optimal.mp3"></audio>
+    <audio id="alert-audio" src="/audio/alert.mp3"></audio>
+    <audio id="morse-audio" src="/audio/game-over-morse.mp3"></audio>
 
     <!-- ================================================  SETTINGS MODAL  =================================================== -->
     <dialog id="settings-modal" class="modal">
