--- a/src/pages/placement.html
+++ b/src/pages/placement.html
@@ -43,8 +43,8 @@
                  data-vertical="false"
                  data-character="c"
             >
-              <img src="/carrier.png" alt="">
-              <img src="/carrier-v.png" alt="">
+              <img src="/images/carrier.png" alt="">
+              <img src="/images/carrier-v.png" alt="">
             </div>
           </div>
 
@@ -56,8 +56,8 @@
                  data-vertical="false"
                  data-character="b"
             >
-              <img src="/battleship.png" alt="">
-              <img src="/battleship-v.png" alt="">
+              <img src="/images/battleship.png" alt="">
+              <img src="/images/battleship-v.png" alt="">
             </div>
           </div>
 
@@ -69,8 +69,8 @@
                  data-vertical="false"
                  data-character="r"
             >
-              <img src="/cruiser.png" alt="">
-              <img src="/cruiser-v.png" alt="">
+              <img src="/images/cruiser.png" alt="">
+              <img src="/images/cruiser-v.png" alt="">
             </div>
           </div>
 
@@ -82,8 +82,8 @@
                  data-vertical="false"
                  data-character="s"
             >
-              <img src="/submarine.png" alt="">
-              <img src="/submarine-v.png" alt="">
+              <img src="/images/submarine.png" alt="">
+              <img src="/images/submarine-v.png" alt="">
             </div>
           </div>
 
@@ -95,14 +95,15 @@
                  data-vertical="false"
                  data-character="d"
             >
-              <img src="/destroyer.png" alt="">
-              <img src="/destroyer-v.png" alt="">
+              <img src="/images/destroyer.png" alt="">
+              <img src="/images/destroyer-v.png" alt="">
             </div>
           </div>
         </section>
   
         <section class="start-game-container">
             <button id="start-btn">Start Game</button>
+            <a id="start-game-link" href="./game.html"></a>
         </section>
     </main>
     <script type="module" src="../init/placementInit.ts"></script>
