--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="prefetch" href="/gif/fire.gif">
+    <link rel="prefetch" href="/gif/radar.gif">
+    <link rel="prefetch" href="/gif/waves.gif">
+
+    <link rel="prefetch" href="/audio/waves-bg.mp3" as="audio">
+    <link rel="prefetch" href="/audio/background.mp3" as="audio">
+    <link rel="prefetch" href="/audio/activate.mp3" as="audio">
+    <link rel="prefetch" href="/audio/alert.mp3" as="audio">
+    <link rel="prefetch" href="/audio/explosion.mp3" as="audio">
+    <link rel="prefetch" href="/audio/game-over.mp3" as="audio">
+    <link rel="prefetch" href="/audio/optimal.mp3" as="audio">
+    <link rel="prefetch" href="/audio/splash-bs.mp3" as="audio">
+    <link rel="prefetch" href="/audio/sunk.mp3" as="audio">
+
+    <link rel="prefetch" href="/images/carrier.png" as="image">
+    <link rel="prefetch" href="/images/battleship.png" as="image">
+    <link rel="prefetch" href="/images/cruiser.png" as="image">
+    <link rel="prefetch" href="/images/submarine.png" as="image">
+    <link rel="prefetch" href="/images/destroyer.png" as="image">
+    <link rel="prefetch" href="/images/carrier-v.png" as="image">
+    <link rel="prefetch" href="/images/battleship-v.png" as="image">
+    <link rel="prefetch" href="/images/cruiser-v.png" as="image">
+    <link rel="prefetch" href="/images/submarine-v.png" as="image">
+    <link rel="prefetch" href="/images/destroyer-v.png" as="image">
+
     <title>Battleship</title>
   </head>
 
