setup style for menu page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,21 @@
   </head>
 
   <body>
-      <button class="btn-opponent">vs player2</button>
-      <button class="btn-opponent" data-vs-computer>vs computer</button>
+      <aside>
+        <h2>Breaking News: Warships Stranded at Sea!</h2>
+        <p>
+          In an unprecedented sequence of events, a crisis has unfolded on the high seas, leaving warships from both Russia and the UK stranded without access to vital replenishment. The situation escalated after two individuals, reportedly incited by a provocative act, threw Heinz tomato soup at a renowned painting, triggering widespread outrage in the UK. In response, the government swiftly enacted a ban on fossil fuels, sending shockwaves through the maritime community.
+        </p>
+        <p>
+          Concurrently, Russian activists, fervently protesting against oil shipments, blockaded crucial cargo routes. The confluence of these events has resulted in a sobering impasse, leaving naval crews grappling with the unexpected consequences of geopolitical tensions and environmental activism. As diplomatic efforts intensify to resolve this maritime standoff, the world watches with bated breath, mindful of the broader implications for global stability and environmental stewardship.
+      </p>
+      </aside>
+
+      <main>
+        <h1>BATTLESHIP</h1>
+        <button class="btn-opponent">vs player2</button>
+        <button class="btn-opponent" data-vs-computer>vs computer</button>
+      </main>
 
       <dialog id="input-name-modal">
         <form action="">
